[package]
name = "warp-ws-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.28.1", features = ["macros", "sync", "rt-multi-thread"]}
tokio-stream = "0.1.14"
warp = "0.3.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
futures = { version = "0.3.28", default-features = false }
uuid = { version = "1.3.3", features = ["serde", "v4"] }
